<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_canceled">Sign in canceled</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Please, wait…</string>

    <string name="feed">Feed</string>
    <string name="add_feed">Add feed</string>
    <string name="edit_feed">Edit feed</string>
    <string name="feed_reminding">Feed reminding</string>

    <string name="comments">Comments</string>

    <string name="profile">Profile</string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_display_name">Display Name</string>
    <string name="profile_description">Description</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_email">e-mail</string>
    <string name="profile_phone_number">Phone</string>
    <string name="profile_gender">Gender</string>
    <string name="update_profile">Update</string>

    <string name="up_to_image_maximum">Only %d images can be selected !</string>
    <string name="up_to_video_maximum">Only %d video can be selected !</string>

    <string name="alert_title">Alert</string>
    <string name="alert_delete_feed_failed">Delete feed failed !</string>
    <string name="alert_unknown_type">Unknown type</string>

    <string name="error_feed_content_is_empty">Feed content is empty !</string>
    <string name="error_schedule_title_is_empty">Schedule title is empty !</string>
    <string name="error_title">Error</string>
    <string name="error">Error</string>
    <string name="error_unknown">Unknown error. Please contact staff for assistance.</string>
    <string name="error_no_internet">There is no internet.</string>
    <string name="error_video_duration">Duration has to less than %d seconds !</string>
    <string name="error_system">System error occurred. Please contact administrator!</string>

    <string name="feed_actions_title">Actions</string>
    <string-array name="feed_actions">
        <item>update</item>
        <item>notify</item>
        <item>pin</item>
        <item>delete</item>
    </string-array>

    <string-array name="media_types">
        <item>Image</item>
        <item>Video</item>
    </string-array>

    <string name="sex_types_title">Gender</string>
    <string-array name="sex_types">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <string name="news">News</string>
    <string name="news_centers_for_disease_control">Centers for Disease Control</string>
    <string name="news_central_weather_bureau_weather">Central Weather Bureau - Weather</string>
    <string name="news_central_weather_bureau_earthquake">Central Weather Bureau - Earthquake</string>

    <string name="schedule_actions_title">Actions</string>
    <string-array name="schedule_actions">
        <item>update</item>
        <item>delete</item>
    </string-array>

    <string name="schedule">Schedule</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="add_schedule_message">Would you like to add this event to your calendar?</string>
    <string name="schedule_edit">Edit schedule</string>

    <string name="start_date">Start Date</string>
    <string name="start_date_title">Select Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="start_time_title">Select Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_date_title">Select End Date</string>
    <string name="end_time">End Time</string>
    <string name="end_time_title">Select End Time</string>

    <string name="channel_name">Messages</string>
    <string name="channel_description">Messages from Server</string>

    <string name="push_notification_successfully">Push notification successfully!</string>
</resources>