<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/feedFragment">

    <action
        android:id="@+id/action_global_authFragment"
        app:destination="@id/authFragment"
        app:launchSingleTop="true"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/authFragment"
        android:name="tw.iamstar.ui.auth.AuthFragment"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_nav_main"
            app:destination="@id/feedFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/feedFragment"
        android:name="tw.iamstar.ui.feed.FeedFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/action_feedFragment_to_editFeedFragment"
            app:destination="@id/editFeedFragment" />
        <action
            android:id="@+id/action_feedFragment_to_feedDetailFragment"
            app:destination="@id/feedDetailFragment" />
        <action
            android:id="@+id/action_feedFragment_to_commentFragment"
            app:destination="@id/commentFragment" />
    </fragment>

    <fragment
        android:id="@+id/feedDetailFragment"
        android:name="tw.iamstar.ui.feed.FeedDetailFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed_detail">
        <action
            android:id="@+id/action_feedDetailFragment_to_mediaReviewFragment"
            app:destination="@id/mediaReviewFragment" />
        <argument
            android:name="feedId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/mediaReviewFragment"
        android:name="tw.iamstar.ui.media.MediaReviewFragment"
        tools:layout="@layout/fragment_media_review">
        <argument
            android:name="url"
            app:argType="string" />
        <argument
            android:name="type"
            app:argType="string" />
        <argument
            android:name="width"
            app:argType="integer" />
        <argument
            android:name="height"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/editFeedFragment"
        android:name="tw.iamstar.ui.feed.EditFeedFragment"
        android:label="@string/edit_feed"
        tools:layout="@layout/fragment_edit_feed">
        <argument
            android:name="feedId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="tw.iamstar.ui.profile.EditProfileFragment"
        android:label="@string/profile_edit"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="tw.iamstar.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/commentFragment"
        android:name="tw.iamstar.ui.comment.CommentFragment"
        android:label="@string/comments"
        tools:layout="@layout/fragment_comment">
        <argument
            android:name="feedId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/newsFragment"
        android:name="tw.iamstar.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="tw.iamstar.ui.schedule.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule">
        <action
            android:id="@+id/action_scheduleFragment_to_editScheduleFragment"
            app:destination="@id/editScheduleFragment" />
    </fragment>

    <fragment
        android:id="@+id/editScheduleFragment"
        android:name="tw.iamstar.ui.schedule.EditScheduleFragment"
        android:label="@string/schedule_edit"
        tools:layout="@layout/fragment_edit_schedule">
        <argument
            android:name="scheduleId"
            app:argType="string" />
    </fragment>

</navigation>