<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.EditScheduleFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/view_schedule_avatar"
        android:layout_width="@dimen/distance_52_dp"
        android:layout_height="@dimen/distance_52_dp"
        android:layout_margin="@dimen/distance_16_dp"
        app:cardCornerRadius="@dimen/corner_radius_50_dp"
        app:cardElevation="@dimen/distance_3_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_person">

        <ImageView
            android:id="@+id/view_schedule_head_shot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_person" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/view_schedule_location"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/distance_16_dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_schedule_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_schedule_avatar"
        app:layout_constraintTop_toTopOf="@+id/view_schedule_avatar"
        tools:text="Kaohsiung City, Taiwan" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_input_schedule_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_16_dp"
        android:hint="@string/schedule"
        android:inputType="textMultiLine|textAutoCorrect"
        android:maxHeight="@dimen/distance_180_dp"
        app:layout_constraintEnd_toEndOf="@id/view_schedule_location"
        app:layout_constraintStart_toStartOf="@id/view_schedule_avatar"
        app:layout_constraintTop_toBottomOf="@id/view_schedule_avatar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/view_input_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_16_dp"
        android:hint="@string/start_date"
        android:padding="@dimen/distance_8_dp"
        app:layout_constraintEnd_toStartOf="@id/view_input_start_time"
        app:layout_constraintStart_toStartOf="@id/view_schedule_avatar"
        app:layout_constraintTop_toBottomOf="@id/view_input_schedule_title" />

    <TextView
        android:id="@+id/view_input_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_time"
        android:padding="@dimen/distance_8_dp"
        app:layout_constraintEnd_toEndOf="@id/view_schedule_location"
        app:layout_constraintStart_toEndOf="@id/view_input_start_date"
        app:layout_constraintTop_toTopOf="@id/view_input_start_date" />

    <TextView
        android:id="@+id/view_input_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_16_dp"
        android:hint="@string/end_date"
        android:padding="@dimen/distance_8_dp"
        app:layout_constraintEnd_toStartOf="@id/view_input_end_time"
        app:layout_constraintStart_toStartOf="@id/view_schedule_avatar"
        app:layout_constraintTop_toBottomOf="@id/view_input_start_date" />

    <TextView
        android:id="@+id/view_input_end_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/end_time"
        android:padding="@dimen/distance_8_dp"
        app:layout_constraintEnd_toEndOf="@id/view_schedule_location"
        app:layout_constraintStart_toEndOf="@id/view_input_end_date"
        app:layout_constraintTop_toTopOf="@id/view_input_end_date" />

    <ImageView
        android:id="@+id/view_schedule_image"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        app:layout_constraintBottom_toTopOf="@id/view_bottom_background"
        app:layout_constraintEnd_toEndOf="@id/view_schedule_location"
        app:layout_constraintStart_toStartOf="@id/view_schedule_avatar"
        app:layout_constraintTop_toBottomOf="@id/view_input_end_date"
        tools:src="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/view_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/distance_8_dp"
        android:src="@drawable/ic_cancel"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/view_schedule_image"
        app:layout_constraintTop_toTopOf="@id/view_schedule_image" />

    <View
        android:id="@+id/view_bottom_background"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="60dp"
        android:background="@color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/view_add_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/distance_18_dp"
        android:src="@drawable/ic_add_location"
        app:layout_constraintBottom_toBottomOf="@id/view_bottom_background"
        app:layout_constraintEnd_toEndOf="@id/view_bottom_background"
        app:layout_constraintTop_toTopOf="@id/view_bottom_background" />

    <ImageView
        android:id="@+id/view_add_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/distance_36_dp"
        android:src="@drawable/ic_photo_camera"
        app:layout_constraintBottom_toBottomOf="@id/view_add_location"
        app:layout_constraintEnd_toStartOf="@id/view_add_location"
        app:layout_constraintTop_toTopOf="@id/view_add_location" />

</androidx.constraintlayout.widget.ConstraintLayout>